--- a/.github/workflows/deploy_book.yml
+++ b/.github/workflows/deploy_book.yml
@@ -18,8 +18,9 @@ jobs:
         pages: write
         id-token: write
       steps:
-        - name: Checkout repository
-          uses: actions/checkout@v5
+        - uses: actions/checkout@v5
+        - name: Setup Pages
+          uses: actions/configure-pages@v3
         - name: Install uv
           uses: astral-sh/setup-uv@v6
         - name: "Set up Python"
@@ -33,8 +34,10 @@ jobs:
           run: |
               cd tutorial/roteiro
               uv run jupyter book build --html
-        - name: Deploy to GitHub Pages
-          uses: peaceiris/actions-gh-pages@v3
+        - name: Upload artifact
+          uses: actions/upload-pages-artifact@v3
           with:
-              github_token: ${{ secrets.GITHUB_TOKEN }}
-              publish_dir: tutorial/roteiro/_build/html
+            path: './tutorial/roteiro/_build/html'
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v4
